app_green.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app_green_pod
  namespace: default
  labels:
    environment: green
    tier: app
spec:
  containers:
  - name: app-container
    image: nginx
    ports:
    - containerPort: 80
