app_red.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-red-pod
  namespace: default
  labels:
    environment: red
    tier: app
spec:
  containers:
  - name: app-container
    image: nginx
    ports:
    - containerPort: 80
