web_red.yaml
[root@emea-dl-1 ~]# cat web_red.yaml
apiVersion: v1
kind: Pod
metadata:
  name: web
  namespace: default
  labels:
    environment: red
    tier: web
spec:
  containers:
  - name: web-container
    image: nginx
    ports:
    - containerPort: 80
