app_green_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-green-np
  namespace: default
spec:
  podSelector:
    matchLabels:
      tier: app
      environment: green
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: web
          environment: green
  egress:
  - to:
    - podSelector:
        matchLabels:
          tier: db
          environment: green
    ports:
    - protocol: TCP
      port: 80
