db_red_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-red-np
  namespace: default
spec:
  podSelector:
    matchLabels:
      tier: db
      environment: red
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          tier: app
          environment: red
