web_red_networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: web-red-np
  namespace: default
spec:
  podSelector:
    matchLabels:
      tier: web
      environment: red
  policyTypes:
  - Ingress
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          tier: app
          environment: red
    ports:
    - protocol: TCP
      port: 80
